--- a/mongodb-taskcat-example/taskcat_outputs/index.html
+++ b/mongodb-taskcat-example/taskcat_outputs/index.html
@@ -212,7 +212,7 @@ td.text-right {
                             Documentation: http://taskcat.io
                             <br />
                         </a>
-                        Tested on: Tuesday - Jun,02,2020 @ 09:55:07
+                        Tested on: Monday - Jun,22,2020 @ 11:48:15
                     </td>
                     <td class=taskcat-logo>
                         <h3>
@@ -254,16 +254,16 @@ td.text-right {
                         </h3>
                     </td>
                     <td class=text-left>
-                        cn-north-1
+                        cn-northwest-1
                     </td>
                     <td class=text-left>
-                        tCaT-mongodb-taskcat-example-my-test-789ff560e8d844aca436753f00af4f22
+                        tCaT-mongodb-taskcat-example-my-test-a9930490b8f44c7fac4245e814ff53c7
                     </td>
                     <td class=test-red>
                         CREATE_FAILED
                     </td>
                     <td class=text-left>
-                        <a href="tCaT-mongodb-taskcat-example-my-test-789ff560e8d844aca436753f00af4f22-cn-north-1-cfnlogs.txt">
+                        <a href="tCaT-mongodb-taskcat-example-my-test-a9930490b8f44c7fac4245e814ff53c7-cn-northwest-1-cfnlogs.txt">
                             View Logs 
                         </a>
                     </td>
